[package]
name = "rc_car"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit_motorkit = "0.1"
byteorder = "1"
config = "0.10"
gilrs = { version = "0.7", features = ["serde"] }
opencv = "0.29"
linux-embedded-hal = "0.3"
nmea0183 = "0.2"
pwm-pca9685 = "0.2"
rppal = "0.11"
rplidar_drv = "0.6"
rpos_drv = "0.2"
serialport = "3"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
